--- a/src/sass/_preview.scss
+++ b/src/sass/_preview.scss
@@ -52,6 +52,14 @@
       object-fit: cover;
       transition: all 0.3s;
     }
+
+    @include respond(tab-port) {
+      display: none;
+    }
+
+    @include respond(phone) {
+      display: block;
+    }
   }
 
   &__data {
