--- a/src/sass/_recipe.scss
+++ b/src/sass/_recipe.scss
@@ -74,6 +74,10 @@
     display: flex;
     align-items: center;
     padding: 7.5rem 8rem 3.5rem 8rem;
+
+    @include respond(tab-port) {
+      padding: 7.5rem 4rem 3.5rem 4rem;
+    }
   }
 
   &__info {
@@ -97,6 +101,12 @@
   &__info-data {
     margin-right: 0.5rem;
     font-weight: 700;
+  }
+
+  &__info-text {
+    @include respond(phone-small) {
+      display: none;
+    }
   }
 
   &__info-buttons {
@@ -135,22 +145,35 @@
     h3 {
       margin: 0;
     }
+
+    @include respond(phone-small) {
+      padding: 2rem 4rem 6rem 4rem;
+    }
   }
   &__nutrients {
     margin-top: 3rem;
     display: flex;
-    flex: row nowrap;
+    flex-flow: row wrap;
     justify-content: space-between;
+
+    @include respond(tab-land) {
+      justify-content: center;
+    }
   }
   &__nutrient-field {
     background-color: $color-grey-light-2;
     font-size: 1.4rem;
     text-transform: uppercase;
+    // margin: 1.5rem;
     padding: 3rem 2rem;
     text-align: center;
     min-width: 13rem;
     box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.15);
     border-radius: 1rem;
+
+    @include respond(tab-land) {
+      margin: 2rem;
+    }
   }
   &__nutrient-value {
     color: $color-primary;
@@ -174,6 +197,11 @@
     grid-template-columns: 1fr 1fr;
     gap: 2.5rem 3rem;
     list-style: none;
+
+    @include respond(tab-port) {
+      grid-template-columns: 1fr;
+      gap: 2.5rem 0;
+    }
   }
 
   &__ingredient {
@@ -258,11 +286,19 @@
     grid-template-rows: auto;
     gap: 0.5rem 5rem;
     place-items: start;
+
+    @include respond(tab-port) {
+      grid-template-columns: 1fr;
+    }
   }
 
   &__label {
     grid-row: 1;
     font-weight: 600;
+
+    @include respond(tab-port) {
+      grid-row: initial;
+    }
   }
   &__select {
     font-size: 1.5rem;
@@ -274,6 +310,10 @@
     transition: all 0.2s;
     place-self: stretch;
     text-transform: capitalize;
+
+    @include respond(tab-port) {
+      grid-row: initial;
+    }
 
     &:focus {
       outline: none;
@@ -293,5 +333,10 @@
     margin-top: 3rem;
     place-self: center;
     max-width: 15rem;
+
+    @include respond(tab-port) {
+      grid-row: initial;
+      grid-column: 1;
+    }
   }
 }
