--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -109,6 +109,7 @@
     padding: 1rem 1.5rem;
     border-radius: 3rem;
     position: absolute;
+    z-index: 100;
     top: 11rem;
     right: 2rem;
     // transform: translateX(-50%);
