--- a/src/sass/_searchResults.scss
+++ b/src/sass/_searchResults.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
 
-  @include respond(phone-small) {
+  @include respond(phone) {
     margin-top: 3rem;
   }
 }
