--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -90,6 +90,10 @@ body {
   }
   @include respond(phone) {
     grid-template-rows: 10rem minmax(130rem, auto);
+
+    &__planner {
+      grid-template-rows: 10rem auto;
+    }
   }
 }
 
@@ -145,6 +149,12 @@ body {
 
     @include respond(tab-land) {
       padding: 5rem 5rem 0rem 5rem;
+    }
+    @include respond(phone) {
+      padding: 0;
+      margin-top: 8rem;
+      justify-content: flex-start;
+      height: fit-content;
     }
   }
 
