--- a/src/sass/_planner.scss
+++ b/src/sass/_planner.scss
@@ -12,6 +12,17 @@
     grid-template-columns: 12rem repeat(4, 1fr);
   }
 
+  @include respond(phone) {
+    padding: 0 8rem 0 5rem;
+    grid-template-columns: 20rem 1fr;
+    grid-template-rows: repeat(4, 10rem);
+  }
+
+  @include respond(phone-small) {
+    grid-template-columns: 15rem 1fr;
+    grid-template-rows: repeat(4, 10rem);
+  }
+
   &__date {
     align-self: flex-start;
   }
@@ -27,6 +38,11 @@
     clip-path: polygon(0 0, 100% 0, 85% 50%, 100% 100%, 0 100%);
     transition: all 0.2s;
 
+    @include respond(phone) {
+      margin-top: 0;
+      margin-bottom: 2rem;
+    }
+
     &:hover {
       padding-left: 3rem;
     }
@@ -35,16 +51,36 @@
   &__empty {
     grid-column: 1;
     grid-row: 1;
+
+    @include respond(phone) {
+      display: none;
+    }
   }
 
   &__day-cell {
     grid-column: 1;
     justify-self: left;
     align-self: center;
+
+    @include respond(phone) {
+      display: none;
+
+      // &--active {
+      //   display: initial;
+      //   place-self: center;
+      //   grid-column: 2;
+      //   grid-row: 1;
+      // }
+    }
   }
   &__meal-cell {
     grid-row: 1;
     place-self: center;
+
+    @include respond(phone) {
+      grid-column: 1;
+      grid-row: unset;
+    }
   }
 
   &__day {
@@ -62,6 +98,12 @@
       padding: 1rem;
       font-size: 1.4rem;
     }
+
+    // @include respond(phone) {
+    //   min-width: 13rem;
+    //   padding: 1rem 2rem;
+    //   font-size: 1.4rem;
+    // }
   }
 
   &__meal {
@@ -89,14 +131,86 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(7, 10rem);
     border: 0.25px solid $color-grey-light-2;
+
+    @include respond(phone) {
+      grid-column: 2 / span 1;
+      grid-row: 1 / span 4;
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(4, 10rem);
+      overflow: hidden;
+    }
   }
 
   &__recipe {
     border: 0.25px solid $color-grey-light-2;
+
+    @include respond(phone) {
+      display: none;
+
+      &--active {
+        display: initial;
+      }
+    }
   }
 
   &__pagination {
     padding: 0;
+
+    @include respond(phone) {
+      margin: 1.5rem 2.5rem;
+    }
+  }
+
+  &__form {
+    display: none;
+
+    @include respond(phone) {
+      display: initial;
+      align-self: center;
+      margin-bottom: 4rem;
+      margin-left: 12rem;
+    }
+  }
+
+  @include respond(phone) {
+    &__select-label {
+      // font-size: 1.8rem;
+      // margin-right: 3rem;
+      display: none;
+    }
+
+    &__select {
+      font-size: 1.8rem;
+      padding: 0.8rem 0.5rem;
+      max-width: 20rem;
+      border: 1px solid #ddd;
+      border-radius: 1rem;
+      transition: all 0.2s;
+      text-transform: uppercase;
+      text-align: center;
+      font-weight: 600;
+      background-image: $gradient;
+      color: #fff;
+
+      &:focus {
+        outline: none;
+        border: 1px solid $color-primary;
+
+        background-color: $color-grey-light-1;
+      }
+    }
+
+    &__option {
+      color: $color-grey-dark-1;
+      padding: 1rem 1.5rem;
+      font-weight: 600;
+    }
+    &__submit {
+      // visibility: hidden;
+      // width: 1rem;
+      display: none;
+    }
   }
 }
 
@@ -108,7 +222,7 @@
     &:visited {
       height: 100%;
       display: flex;
-      align-items: center;
+      place-content: center;
       padding: 1.5rem 3.25rem;
       transition: all 0.3s;
       text-decoration: none;
@@ -128,6 +242,7 @@
 
   &__fig {
     flex: 0 0 5rem;
+    align-self: center;
     border-radius: 50%;
     overflow: hidden;
     height: 5rem;
@@ -160,6 +275,14 @@
     }
 
     @include respond(tab-land) {
+      display: none;
+    }
+
+    @include respond(phone) {
+      display: initial;
+    }
+
+    @media only screen and (max-width: 21.875em) {
       display: none;
     }
   }
