--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -29,16 +29,16 @@ body {
   font-weight: 400;
   line-height: 1.6;
   color: $color-grey-dark-1;
-  background-image: $gradient;
-  background-size: cover;
-  background-repeat: no-repeat;
+  // background-image: $gradient;
+  // background-size: cover;
+  // background-repeat: no-repeat;
   min-height: calc(100vh - 2 * 4vw);
 }
 
 .container-home {
-  max-width: 120rem;
+  // max-width: 120rem;
+  // margin: 4vw auto;
   min-height: 117rem;
-  margin: 4vw auto;
   background-color: #fff;
   border-radius: 9px;
   overflow: hidden;
@@ -67,9 +67,9 @@ body {
 }
 
 .container-pages {
-  max-width: 120rem;
+  // max-width: 120rem;
+  // margin: 4vw auto;
   min-height: 100rem;
-  margin: 4vw auto;
   background-color: #fff;
   border-radius: 9px;
   overflow: hidden;
